--- a/index.html
+++ b/index.html
@@ -1,13 +1,47 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
 <head>
 <title>Page Title</title>
 </head>
 <body>
-
 <h1>My First Heading</h1>
 <p>My first paragraph.</p>
 <a href="https://ww.w3schools.com">Visit W3Schools</a>
+<br>
+<img src="imgs/img_girl.jpg" with="200" height="300" alt="Girl with a jacket">
 
+<p style="color:red;">This is a red paragraph.</p>
+
+<p title="I´m a tooltip">This is a paragraph.</p>
+<p title='John "ShotGun" Nelson'>John with double quotes</p>
+<p title="John 'ShotGun' Nelson">John with single quotes</p>
+<h1>Heading 1</h1>
+<h2>Heading 2</h2>
+<h3>Heading 3</h3>
+<h4>Heading 4</h4>
+<h5>Heading 5</h5>
+<h6>Heading 6</h6>
+<h1 style="font-size:60;">Heading 1</h1>
+<p>This is a paragraph</p>
+<p>This is another paragraph</p>
+<h1>This is heading 1</h1>
+<p>This is some text.</p>
+<hr>
+<h2>This is heading 2</h2>
+<p>This is some other text.</p>
+<hr>
+<p>This is<br>a paragraph<br>with line breaks.</p>
+<p>
+	My Bonnie lies over the ocean.
+	My Bonnie lies over the sea.
+	My Bonnie lies over the ocean.
+	Oh, bring back my Bonnie to me.
+</p>
+<pre>
+	My Bonnie lies over the ocean.
+	My Bonnie lies over the sea.
+	My Bonnie lies over the ocean.
+	Oh, bring back my Bonnie to me.
+</pre>
 </body>
 </html>
