Modificado links.html

--- a/links.html
+++ b/links.html
@@ -22,7 +22,8 @@
 	<p>O target atributo pode ter um dos seguintes valores:</p>
 
 	<p>_self - Padrão. Abre o documento na mesma janela/guia em que foi clicado</p>
-	<p>_blank - Abre o documento em uma nova janela ou guia</p>
+	<p>_blank - Abre o documento em uma nova janela ou guia</p>Drago
+	
 	<p>_parent - Abre o documento no quadro pai</p>
 	<p>_top - Abre o documento em todo o corpo da janela</p>
 	
