Arquivos movidos par html/

--- a/html/links.html
+++ b/html/links.html
@@ -29,6 +29,18 @@
 	
 	<a href="https://www.w3schools.com/" target="_blank">Visit W3Schools.com</a>
 	
-	
+<h2>URLs absolutos vs. URLs relativos</h2>
+<p>Ambos os exemplos acima estão usando um URL absoluto (um endereço da Web completo) no hrefatributo</p>
+
+<p>Um link local (um link para uma página dentro do mesmo site) é especificado com um URL relativo (sem a parte "https://www"):</p>
+
+<h3>Absolute URLs</h3>
+<p><a href="https://www.w3.org/">W3C</a></p>
+<p><a href="https://www.google.com/">Google</a></p>
+
+<h3>Relative URLs</h3>
+<p><a href="html_images.asp">HTML Images</a></p>
+<p><a href="/css/default.asp">CSS Tutorial</a></p>
+
 </body>
 </html>
