--- a/links.html
+++ b/links.html
@@ -34,13 +34,35 @@
 
 <p>Um link local (um link para uma página dentro do mesmo site) é especificado com um URL relativo (sem a parte "https://www"):</p>
 
-<h3>Absolute URLs</h3>
+<h3>URLs Absolutas</h3>
 <p><a href="https://www.w3.org/">W3C</a></p>
 <p><a href="https://www.google.com/">Google</a></p>
 
-<h3>Relative URLs</h3>
+<h3>URLs Relativas</h3>
 <p><a href="html_images.asp">HTML Images</a></p>
 <p><a href="/css/default.asp">CSS Tutorial</a></p>
 
+<h2>Links HTML - Use uma imagem como um link</h2>
+<p>Para usar uma imagem como link, basta colocar a &lt;img&gt; tag dentro da &lt;a&gt; tag:</p>
+<p>The image below is a link. Try to click on it.</p>
+
+<a href="index.html"><img src="imgs/smiley.gif" alt="HTML tutorial" style="width; 42px; height:42px;"></a>
+
+<h2>Link para um endereço de e-mail</h2>
+<p>Use mailto: dentro do atributo href para criar um link que abra o programa de e-mail do usuário (para permitir que ele envie um novo e-mail):</p>
+
+<a href="mailto:meu@email.com">Send email</a>
+
+<h2>Botão como um link</h2>
+<p>Para usar um botão HTML como um link, você precisa adicionar algum código JavaScript.</p>
+
+<p>O JavaScript permite que você especifique o que acontece em determinados eventos, como o clique de um botão:</p>
+
+<a button onlclick="document.location='default.asp'">HTML Tutorial</a>
+
+<h2>Títulos de links</h2>
+<p>O atributo title especifica informações extras sobre um elemento. As informações geralmente são mostradas como um texto de dica de ferramenta quando o mouse passa sobre o elemento.</p>
+
+<a href="https://www.w3schools.com/html/" title="Go to W3Schools HTML sections">Visit our HTML Tutorial</a>
 </body>
 </html>
