Criado links-botoes.html, links-cores.html e alterado links.html

--- a/links.html
+++ b/links.html
@@ -64,5 +64,19 @@
 <p>O atributo title especifica informações extras sobre um elemento. As informações geralmente são mostradas como um texto de dica de ferramenta quando o mouse passa sobre o elemento.</p>
 
 <a href="https://www.w3schools.com/html/" title="Go to W3Schools HTML sections">Visit our HTML Tutorial</a>
+
+<h2>Mais sobre URLs absolutos e URLs relativos</h2>
+<p>Exemplo: Use um URL completo para vincular a uma página da Web:</p>
+<a href="https://www.w3schools.com/html/default.asp">HTML tutorial</a>
+
+<p>Exemplo Link para uma página localizada na pasta html no site atual:</p>
+<a href="/html/default.asp">HTML tutorial</a>
+
+<p>Exemplo: Link para uma página localizada na mesma pasta da página atual:</p>
+<a href="default.asp">HTML tutorial</a>
+
+
+
+
 </body>
 </html>
